[gd_scene load_steps=2 format=3 uid="uid://bxqqvbu0ux8d7"]

[ext_resource type="Script" path="res://scripts/logic/ghost_trigger.gd" id="1_1gl1i"]

[node name="GhostTrigger" type="Area2D"]
collision_layer = 64
script = ExtResource("1_1gl1i")
one_time = true
metadata/_edit_group_ = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
